# tengu-init

./: Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md  install.sh  run.sh
.github/workflows/: pipeline.yml  release.yml
crates/tengu-init/: Cargo.toml
crates/tengu-init/src/: main.rs
crates/tengu-init/src/providers/: baremetal.rs  hetzner.rs  mod.rs  ssh.rs
crates/tengu-init/templates/: cloud-init.yml.tera
crates/tengu-provision/: Cargo.toml
crates/tengu-provision/src/: config.rs  lib.rs  manifest.rs
crates/tengu-provision/src/render/: bash.rs  cloud_init.rs  mod.rs
crates/tengu-provision/src/steps/: command.rs  directory.rs  file.rs  firewall.rs  mod.rs  package.rs  service.rs  user.rs
src/: main.rs
src/providers/: hetzner.rs  mod.rs
templates/: cloud-init.yml.tera
