[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"
authors = ["Chi <chi@localhost>"]
repository = "https://github.com/saiden-dev/tengu-init"

[workspace.dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# CLI output
comfy-table = "7"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# Templating
tera = "1"

# Temp files
tempfile = "3"

# Crypto (for checksums)
sha2 = "0.10"
hex = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Builder pattern methods intentionally return Self
return_self_not_must_use = "allow"
# Cloud-init config needs multiple bools
struct_excessive_bools = "allow"
# Format push is fine for script building
format_push_string = "allow"
